plang/testing/logs/false-incorrect/98/program98.p.p
z cMG :- n YLGrQ (Ro) (Vk) (Fs1V); ((q (btC (I)) epr, tl1 (X))), jm (G) (Y6UK) fxsl (w u2W); zA n DKO64, ohS0j (XJOim) (tZQtl (R) (sQ59 tZpUC) A (D)) UG UIirK; qKOt bIXx1 (m RibY (KXTj) iJZF9 (tObg1 Pyhu Z oF3 (A))) (ttd (kv0NA) (he1d) (MtLRS)) ME, d2nd f mEAyB DE; f9qzm (autu lVRfm eCyIs) (q142b (o4n6e (N9KJH) qYWnb (lK (jO C9 (dpTH On N (wBO (Ifmk) (o4R06 (MNz3) (WeO)) g)) unrsT) (p))) (E) aG8) (KMqi4) (PIlJu), qu OfFjq fAxad hj (eQPc (M) t8sk (XzyoR)).

cN o.
u (NEHIV) JO (X1LBT) rFi :- (aFU47 (EL) (W) (MyXhF) (rO NUiW b (K1u)), jfDO, h2vY (CLA) Ah; z AdAq); xfUAx t (f VN) qm7VX HAaf, aEzP (YY6X) (PfL) (fQFu ltE (pgg (XncLg) hoM9J (V2te) (T)) Z) cjp, hj (f8I (chh9 q) pct (Z)); e ng (ZMQLx); (yGc (bbfc oA (BbA))).


kw (D) (TD7Kz) (sE (y8 k1Okf (pNbu (d l9jZs) ImoTV)) (O) CpJp) :- a (F) mOZ (PD).


pYvd (LV).
qA4X0 (yy1A ZDlU) :- ((fs tHMpC tSEpJ oK2, cL7 (C3Trq), fot4; t)), ((t bCNP l (hBke); gU)); gKJ2.

pU6X.
vA.
oeX :- (jX; (mU shD6 fw9Sb KYWPP ploM)), q (A2c).
im b1 (g ux01r) (rTlg (l (mvexN (ChZcq) (fmcjz TV (kUc) (gHk0H aR) (l9W (ytci))))) SGx1 (HraN7)).
aeJ (YuZ0a) :- zZ0I Ce9UH oKY (hxUZg (T) e9XZr (E07L) ZIUxa) (b5Bx u9F6 ZngDw (P8) Rat).


a1Ip X C b6 :- xoNLn.
rc.
ri (IQ2) p (G2JR) Xm8.

nj (blxz (B8D) (FegSe) (dHqv QE g2 (JI) (k1BX (Kc) (IkT8W) (j85K (Zn) (rhw (x4CS SY wSd zZYvZ) (CY)) qx4))) (DiT)) (sX5R (L) mdy Cdyu) v.
jO f w7 (l3gNQ ID FtAE) X.
? p9pD hvB.

